# ooplr6

./: CMakeLists.txt  main.cpp
include/: BattleManager.hpp  ConsoleLogger.hpp  FileLogger.hpp  IFightObserver.hpp  IFightVisitor.hpp  INpcFactory.hpp  druid.hpp  factory.hpp  fight_visitor.hpp  npc.hpp  npc_factory.hpp  observers.hpp  ork.hpp  squirrel.hpp
src/: BattleManager.cpp  ConsoleLogger.cpp  FileLogger.cpp  druid.cpp  factory.cpp  fight_visitor.cpp  npc.cpp  npc_factory.cpp  observers.cpp  ork.cpp  squirrel.cpp
test/: main_test.cpp
tests/: maintest.cpp  npc_test
